# CropOptima

./: CMakeLists.txt  README.md
CropOptimaProject/: Graph.h  Utility.h  main.cpp
CropOptimaProject/dataset/: 3000_crops_list.csv  UniqueCrops.csv  cropDataGenerator  cropDataGenerator.cpp  cropNutrientDataset.csv  crop_nutrient_dataset.csv
